feat(domain): refacto / simplify